--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "passport": "^0.4.0",
     "passport-http-bearer": "^1.0.1",
     "passport-jwt": "4.0.0",
+    "path": "^0.12.7",
     "pm2": "^4.2.0",
     "pug": "^3.0.0",
     "uuid": "^8.3.2",
